--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
       	<div class="col-eight tab-full">
 	      	<div class="copyright">
 		        	<span>© Copyright 2018 </span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>         	
+		        	<span>Design by <a href="http://www.styleshout.com/">styleshout.</a></span>         	
 		         </div>		                  
 	      	</div>
 
