--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent50"><span>50%</span></div>
-				   	<strong>Spftware Development</strong>
+				   	<strong>Software Development</strong>
 				   </li>
 				   <!--<li>
 				   <div class="progress percent60"><span>60%</span></div>
