--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="logo-pallavi.png">
+	<link rel="icon" type="image/png" href="logo-p.png">
 
 </head>
 
