--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Government College of Engineering and Ceramic Technology</h4>
+	   					<h4>Dr. Vishwanath Karad MIT World Peace University (MIT-WPU)</h4>
 	   					<p>
 	   						<strong style="color: black">Department:</strong> Computer Science and Engineering<br>
 							<strong style="color: black">Courses: </strong>Data Structures and Algorithms, Computer Organization and Architecture, Discrete
 Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Mathematics, Database Mnagement System, Operating System, Object Oriented Methodology<br>
-	   						<strong style="color: black">SGPA:</strong> 9.14, 9.9, 9.78, 9.94
+	   						<strong style="color: black">CGPA:</strong> 8.45 / 10.00
 	   					</p>
 	   				</div>
 
@@ -247,16 +247,16 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Higher Secondary</h3>
+	   					<h3>Diploma - Information Technology</h3>
 	   					<p>May 2017 - May 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Carmel High School </h4>
+	   					<h4>Government Polytechnic, Awasari( Khurd ), Pune</h4>
 	   					<p>
-	   						<strong style="color: black">Board: </strong> West Bengal Council of Higher Secondary Education<br>
-							<strong style="color: black">Courses: </strong> Mathematics, Physics, Chemistry, Biology, English, Bengali<br>
-	   						<strong style="color: black">Percentage:</strong> 88.4%
+	   						<strong style="color: black">Board: </strong> Maharashtra State Board of Technical Education (MSBTE)<br>
+							<strong style="color: black">Courses: </strong> Database Mnagement System, Operating System, Object Oriented Methodology, Mathematics, Physics, Chemistry, Biology, English, Bengali<br>
+	   						<strong style="color: black">Percentage:</strong> 88.56 / 100.00
 	   					</p>
 	   				</div>
 
