--- a/index.html
+++ b/index.html
@@ -269,12 +269,12 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Secondary</h3>
-	   					<p>January 2015 - May 2017</p>
+	   					<h3> High School </h3>
+	   					<p>January 2007 - May 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Carmel High School </h4>
+	   					<h4>Vidyadham Prashala Shirur</h4>
 	   					<p>
 	   						<strong style="color: black">Board: </strong>West Bengal Board of Secondary Education<br>
 							<strong style="color: black">Courses: </strong>Mathematics, English, Bengali, Physical Sience, Life Science, History, Geography<br>
