--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
 	   				<div class="timeline-content">
 	   					<h4>Vidyadham Prashala Shirur</h4>
 	   					<p>
-	   						<strong style="color: black">Board: </strong>West Bengal Board of Secondary Education<br>
+	   						<strong style="color: black">Board: </strong>Secondary School Certificate<br>
 							<strong style="color: black">Courses: </strong>Mathematics, English, Bengali, Physical Sience, Life Science, History, Geography<br>
 	   						<strong style="color: black">Percentage:</strong> 91.7%
 	   					</p>
