--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
 	   					<h4>Vidyadham Prashala Shirur</h4>
 	   					<p>
 	   						<strong style="color: black">Board: </strong>Secondary School Certificate<br>
-							<strong style="color: black">Courses: </strong>Mathematics, English, Bengali, Physical Sience, Life Science, History, Geography<br>
-	   						<strong style="color: black">Percentage:</strong> 91.7%
+							<strong style="color: black">Courses: </strong>Mathematics, English, Science, Social Science, Sanskrit, Marathi<br>
+	   						<strong style="color: black">Percentage:</strong> 85.00%
 	   					</p>
 	   				</div>
 
