--- a/index.html
+++ b/index.html
@@ -311,12 +311,12 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Technical Content Writer</h3>
-	   					<p>June 2022 - Present</p>
+	   					<h3>Web Developer</h3>
+	   					<p>March 2022 - June 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Scaler Academy</h4>
+	   					<h4>VidyarthiMitra.org</h4>
 	   					<p>
 	   						<ul class="no-bullet">
 	   							<li>&#10003; Write technical blogs on various topics under HTML, CSS, DSA etc.</li>
@@ -333,11 +333,11 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
 
 	   				<div class="timeline-header">
 	   					<h3>Lead</h3>
-	   					<p>August 2021 - Present</p>
+	   					<p>March 2022 - June 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Google Developer Student Clubs</h4>
+	   					<h4>Web Developer</h4>
 	   					<p>
 	   						<ul class="no-bullet">
 	   							<li> &#10003;Conduct online events and workshops impacting over 200+ student developers.</li>
@@ -347,50 +347,6 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
 
 	   			</div> <!-- /timeline-block -->
 
-	   			<div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					<h3>Open Source Contributor</h3>
-	   					<p>March 2020 - May 2020</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-	   					<h4>GirlScript Summer of Code</h4>
-	   					<p>
-	   						<ul class="no-bullet">
-	   							<li>&#10003; Contributed to various projects under different organizations.</li>
-	   							<li>&#10003; Tech stack used: MERN, Python, Dart.</li>
-	   						</ul>
-	   					</p>
-	   				</div>
-
-	   			</div> <!-- /timeline-block -->
-
-	   			<div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					<h3>Content Writer</h3>
-	   					<p>September 2020 - December 2020</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-	   					<h4>Content Whale</h4>
-	   					<p>
-	   						<ul class="no-bullet">
-	   							<li>&#10003; Wrote blogs, website content, social media posts, and tech articles for magazines.</li>
-	   						</ul>
-	   					</p>
-	   				</div>
-
-	   			</div> <!-- /timeline-block -->
 
    			</div> <!-- /timeline-wrap -->   			
 
