--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
 	   					<h4>VidyarthiMitra.org</h4>
 	   					<p>
 	   						<ul class="no-bullet">
-	   							<li>&#10003; Write technical blogs on various topics under HTML, CSS, DSA etc.</li>
+	   							<li>&#10003; Work on Project entitled “Web Design & Development”.</li>
 	   						</ul>
 	   					</p>
 	   				</div>
@@ -332,15 +332,15 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Lead</h3>
+	   					<h3>Content Writer</h3>
 	   					<p>March 2022 - June 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Web Developer</h4>
+	   					<h4>VidyarthiMitra.org</h4>
 	   					<p>
 	   						<ul class="no-bullet">
-	   							<li> &#10003;Conduct online events and workshops impacting over 200+ student developers.</li>
+	   							<li> &#10003;Wrote blogs, website content, social media posts, and tech articles for web portal.</li>
 	   						</ul>
 	   					</p>
 	   				</div>
@@ -395,38 +395,6 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
 		            <p><a href="https://github.com/Pallavi/REST-API">Github</a>  &nbsp; <a href="https://api-books-and-authors.herokuapp.com/books">API</a></p>
 		   		</div>
 
-
-		   		<div class="col-six tab-full projects">
-		   			<h3 class="title-black">College Resources</h3>	
-
-		   			<h5 class="project-type">Flutter App</h5>
-		   			<p>
-		            The app is a collection of all the materials of the college syllabus.
-		        </p>
-		        <p><a href="https://github.com/Pallavi/gcect_resources_app">Github</a></p>
-		   		</div>
-
-		   		<div class="col-six tab-full projects">
-		   			<h3 class="title-black">Instagram Birthday Wisher</h3>	
-
-		   			<h5 class="project-type">Python Bot</h5>
-		   			<p>
-		            A birthday wishing bot that goes through the list of birthdays of family and friends, and sends an instant message to the instagram profile of the person celebrating their birthday.<br>
-		            </p>
-		            <p><a href="https://github.com/Pallavi/Birthday-Wishing-Instagram-Bot">Github</a></p>
-		   		</div>
-
-
-
-		   		<div class="col-six tab-full projects" >
-		   			<h3 class="title-black">Rain Alerter</h3>	
-
-		   			<h5 class="project-type">Python Bot</h5>
-		   			<p>
-		            An application that checks the weather condition for the next 12 hours and sends a message to the registered number whether to carry a sunglass (if it is sunny), or an umbrella (if it rains).
-		        </p>
-		        <p><a href="https://github.com/Pallavi/Rain-Mail">Github</a></p>
-		   		</div>
 
 	         <!-- /portfolio-wrapper --> 
 
