--- a/index.html
+++ b/index.html
@@ -386,15 +386,24 @@ Mathematics, Calculus, Automata, Design and Analysis of Algorithm, Discrete Math
  			<!--checking code-->
 	         	<div class="col-six tab-full projects">
 
-		   			<h3 class="title-black">Books & Authors API</h3>	
+		   			<h3 class="title-black">Online Turf Booking</h3>	
 
-		   			<h5 class="project-type">REST API</h5>
+		   			<h5 class="project-type">Web Application</h5>
 		   			<p>
-		            A REST API made with node.js that contains a list of books and authors, along with rating.<br>
+		            A web application made with php that contains a list of turfs, Client Details, Booking Details.<br>
 		            </p>
 		            <p><a href="https://github.com/Pallavi/REST-API">Github</a>  &nbsp; <a href="https://api-books-and-authors.herokuapp.com/books">API</a></p>
 		   		</div>
+				   <div class="col-six tab-full projects">
 
+					<h3 class="title-black">Froxen Indusrty Stock Management</h3>	
+
+					<h5 class="project-type">Desktop Application</h5>
+					<p>
+				 A desktop appliation made with java that contains a list stock items, along with price.<br>
+				 </p>
+				 <p><a href="https://github.com/Pallavi/REST-API">Github</a>  &nbsp; <a href="https://api-books-and-authors.herokuapp.com/books">API</a></p>
+				</div>
 
 	         <!-- /portfolio-wrapper --> 
 
